--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
   <div class="container">
   <div class ="card">
-    <img id = "my_image" src ="https://thump-images.vice.com/images/2016/07/15/we-asked-americas-top-club-security-expert-how-venues-can-prepare-for-active-shooter-situations-body-image-1468609602.jpg?output-quality=75" alt="moi" height="100" width = "100">
+    <img id = "my-image" src ="https://thump-images.vice.com/images/2016/07/15/we-asked-americas-top-club-security-expert-how-venues-can-prepare-for-active-shooter-situations-body-image-1468609602.jpg?output-quality=75" alt="moi" height="100" width = "100">
     <h1> Benjamin Gabay </h1>
     <h2> Business Analys & Growth Hacker </h2>
     Bacon ipsum dolor amet doner ball tip kielbasa, flank alcatra short loin t-bone filet mignon sirloin pancetta shank tri-tip capicola biltong turducken. Short loin sirloin pork chop landjaeger meatloaf. Meatloaf hamburger corned beef, tail t-bone salami jerky brisket ground round chuck ball tip meatball ribeye. Pork filet mignon sausage doner kevin short loin shankle beef fatback cupim pancetta ribeye prosciutto bacon. Drumstick bresaola salami cow boudin ham pork.
